syntax = "proto3";
package cosmos.evidence;

option go_package = "github.com/cosmos/cosmos-sdk/x/evidence/types";

import "google/protobuf/any.proto";

// GenesisState defines the evidence module's genesis state.
message GenesisState {
  repeated google.protobuf.Any evidence = 1;
}
